--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiogram>=3.22.0",
+    "alembic>=1.16.5",
+    "asyncpg>=0.30.0",
     "pydantic>=2.11.9",
     "pyyaml>=6.0.2",
     "sqlalchemy[asyncio]>=2.0.43",
