--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,6 +79,9 @@ quote-style = "double"
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # allow unused imports in __init__.py
 
+[tool.ruff.lint.flake8-annotations]
+mypy-init-return = true
+
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
