--- a/alembic.ini
+++ b/alembic.ini
@@ -93,16 +93,21 @@ sqlalchemy.url = driver://user:pass@localhost/dbname
 # detail and examples
 
 # format using "black" - use the console_scripts runner, against the "black" entrypoint
-# hooks = black
-# black.type = console_scripts
-# black.entrypoint = black
-# black.options = -l 79 REVISION_SCRIPT_FILENAME
+; hooks = black
+; black.type = console_scripts
+; black.entrypoint = black
+; black.options = -l 79 REVISION_SCRIPT_FILENAME
 
 # lint with attempts to fix using "ruff" - use the module runner, against the "ruff" module
-# hooks = ruff
-# ruff.type = module
-# ruff.module = ruff
-# ruff.options = check --fix REVISION_SCRIPT_FILENAME
+hooks = ruff_format, ruff_check
+
+ruff_format.type = module
+ruff_format.module = ruff
+ruff_format.options = format REVISION_SCRIPT_FILENAME
+
+ruff_check.type = module  
+ruff_check.module = ruff
+ruff_check.options = check --fix REVISION_SCRIPT_FILENAME
 
 # Alternatively, use the exec runner to execute a binary found on your PATH
 # hooks = ruff
