--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,18 @@
 [project]
 name = "linguai-pro"
-version = "0.1.0"
-description = "..."
+version = "1.0.0"
+description = "LinguAI Pro is a Telegram bot for practicing languages."
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiogram>=3.22.0",
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
+    "dishka>=1.7.2",
+    "huggingface-hub>=0.35.3",
     "pydantic>=2.11.9",
     "pyyaml>=6.0.2",
+    "redis>=6.4.0",
     "sqlalchemy[asyncio]>=2.0.43",
 ]
 
@@ -22,52 +25,23 @@ dev = [
 
 
 [tool.ruff]
-line-length = 120
-target-version = "py313"
-exclude = [
-    "src/migrations/",
-]
+line-length = 100
+exclude = ["migrations"]
 
 [tool.ruff.lint]
 select = [
     "E",    # pycodestyle errors
-    "W",    # pycodestyle warnings
     "F",    # pyflakes
-    "I",    # isort (import sorting)
-    "B",    # flake8-bugbear
-    "C4",   # flake8-comprehensions
     "UP",   # pyupgrade
-    "D",    # pydocstyle
-    "ANN",  # flake8-annotations
-    "T20",  # flake8-print (print statements)
-    "PT",   # flake8-pytest-style
+    "B",    # flake8-bugbear
     "SIM",  # flake8-simplify
-    "ARG",  # flake8-unused-arguments
-    "RUF",  # ruff-specific rules
-    "TD",   # flake8-todo
-    "FAST", # flake8-fastapi
-    "ASYNC",# flake8-async
-    "S",    # flake8-bandit (security)
-    "BLE",  # flake8-blind-except
-    "COM",  # flake8-commas
-    "PIE",  # flake8-pie
-    "RSE",  # flake8-raise
-    "TID252", # flake8-tidy-imports
-    "N",    # pep8-naming
-    "PLR",  # pylint refactor rules
-    "FURB", # flake8-refurb
-    "TRY"   # flake8-try
+    "I",    # isort
+    "D"     # pydocstyle
 ]
-
 ignore = [
-    "D100",    # missing docstring in public module
-    "D104",    # missing docstring in public package
-    "D107",    # missing docstring in __init__
-    "RUF001",  # ruff-specific rule
-    "RUF002",  # ruff-specific rule
-    "RUF003",  # ruff-specific rule
-    "S104",    # hardcoded bind all interfaces
-    "COM812"   # specific combination rule
+    "D100", # Missing docstring in public module
+    "D104", # Missing docstring in public package
+    "D107"  # Missing docstring in __init__
 ]
 
 [tool.ruff.lint.isort]
@@ -76,21 +50,11 @@ known-first-party = ["src"]
 [tool.ruff.format]
 quote-style = "double"
 
-[tool.ruff.lint.per-file-ignores]
-"__init__.py" = ["F401"]  # allow unused imports in __init__.py
-
-[tool.ruff.lint.flake8-annotations]
-mypy-init-return = true
-
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.mypy]
-python_version = "3.13"
 strict = true
-explicit_package_bases = true
-show_error_codes = true
+exclude = ["migrations"]
 
-[[tool.mypy.overrides]]
-module = ["sqlalchemy.*", "aiogram.*", "alembic.*"]
-ignore_errors = true
+
