chore: update dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "aiogram>=3.22.0",
+    "aiogram-i18n>=1.4",
     "alembic>=1.16.5",
     "asyncpg>=0.30.0",
     "dishka>=1.7.2",
